concord_macros/tests/trybuild/fail/codegen/reserved_nocontent_arity_one.rs
use concord_macros::api;

api! {
    client ReservedNoContentArityOneApi {
        base "https://example.com"
    }

    GET Ping
        path ["ping"]
        -> NoContent<T>
}

fn main() {}
