concord_macros/tests/trybuild/fail/codegen/reserved_nocontent_arity_one.stderr
error: reserved endpoint I/O family `NoContent` does not take type arguments
  --> tests/trybuild/fail/codegen/reserved_nocontent_arity_one.rs:10:12
   |
10 |         -> NoContent<T>
   |            ^^^^^^^^^^^^
